#

Any time you are upgrading to a new version of the MVC, you should create a new branch.

301330
ADMIN
 -> new options in customer search (schedule, account manager and account type)
 -> new options in organization search (schedule, account type)
 -> new interface for price schedules
 -> everywhere schedule is referenced in the UI got updated (syndication, organizations, etc)



301324
popCheckbox and popRadio are retired. popVal will now handle all input types. all files were updated.
 -> https://github.com/zoovy/AnyCommerce-Development/commit/877a5a382f629150aedfcaa9087b0f37d1667a92
 -> https://github.com/zoovy/AnyCommerce-Development/commit/a6c2fbff7ad08c077842e38100c2dbe7dfc93f6f



201314
jquery.showloading-v1.0.jt must be in pass 0 of rq in init file.
invoiceContainer template changed.
handleSubscribe value should NOT be a form id anymore, but the form itself handleSubscribe($(this)) on the form tag
billAddressTemplate template changed
shipAddressTemplate template changed
checkout_passive, _active and _required extensions gone. Replaced w/ checkout and a var set in app.vars to determine which templates get loaded.
analyzer updated in category explorer to report all '%page' variables. click thumbnail for report

* app-fashion added and in beta
* app-wholesale renamed app-b2b
* after adding an item to the wishlist, the 'view wishlist' page will reflect change. (bug fix)
* appCartExists no longer supported. check removed from init. cartDetail will now create cart if cart id doesn't exist.


201312
* param passed into checkoutCompletes changes. was 'sessionID' and is now cartID


201311
store_checkout not used. namespace for checkoutCompletes changed to orderCreate
includes.js/variations update to remove 'pog_' from input names (for new add to cart command)
some new classes in quickstart. all old checkout classes gone.
Massive update to checkout. most important, the namespace changed from convertSessionToOrder to orderCreate