@@ -12,7 +12,8 @@ ADMIN
  -> new options in organization search (schedule, account type)
  -> new interface for price schedules
  -> everywhere schedule is referenced in the UI got updated (syndication, organizations, etc)
-
+ -> new interface for account utilities (that interface formerly known as tech tools)
+ 	disk usage and inventory event queue are in the 'logs' section.
 
 
 301324
